--- a/mysite/pom.xml
+++ b/mysite/pom.xml
@@ -96,11 +96,10 @@
 	</profiles> -->
   
 	<build>
-		
+		<finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.2.1</version>
 				<configuration>
 					<warSourceDirectory>src/main/webapp</warSourceDirectory>
 				</configuration>
