--- a/mysite/src/main/resources/application.properties
+++ b/mysite/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #profiling
 spring.profiles.active=develope
 #server
-server.port=8088
-server.servlet.context-path=/mysite/
+server.port=8080
+server.servlet.context-path=/
 server.tomcat.uri-encoding=UTF-8
 
 #http
